stateDiagram-v2
    state "A4.0 - Exam Taken" as A4_0
    state "A5.0 - Offered" as A5_0
    state "A5.1 - Offered - Probationary" as A5_1
    state "A5.2 - Offered - Redirected" as A5_2
    state "A5.3 - Waitlisted" as A5_3
    state "A5.5 - Not Qualified [Terminal]" as A5_5

    A4_0 --> A5_0: Scores within cutoff
    A4_0 --> A5_1: Probationary offer
    A4_0 --> A5_2: Redirected
    A4_0 --> A5_3: Waitlisted
    A4_0 --> A5_5: Outside cutoff
    A5_3 --> A5_0: Slot opened
    A5_5 --> [*]
